--- a/trabalho_arrays/array.html
+++ b/trabalho_arrays/array.html
@@ -1,148 +1,136 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Testador de Métodos de Arrays</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      margin: 20px;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arrays Interativos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f9f9f9;
+            color: #333;
+            padding: 20px;
+            max-width: 700px;
+            margin: auto;
+        }
 
-    h1 {
-      text-align: center;
-      color: #333;
-    }
+        h1, h3 {
+            color: #444;
+            margin-top: 40px;
+        }
 
-    .exemplo {
-      background: #fff;
-      border: 1px solid #ddd;
-      padding: 15px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    }
+        p {
+            background: #fff;
+            padding: 10px;
+            border-left: 4px solid #007BFF;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
 
-    button {
-      background-color: #007BFF;
-      color: white;
-      padding: 8px 14px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
+        .hidden {
+            display: none;
+        }
 
-    button:hover {
-      background-color: #0056b3;
-    }
+        button {
+            background-color: #007BFF;
+            color: white;
+            padding: 8px 12px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 5px;
+        }
 
-    .output {
-      margin-top: 10px;
-      background-color: #eee;
-      padding: 10px;
-      border-radius: 5px;
-      font-family: monospace;
-    }
+        button:hover {
+            background-color: #0056b3;
+        }
 
-    input[type="text"] {
-      width: 100%;
-      padding: 8px;
-      margin-top: 8px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-    }
-  </style>
+        input {
+            width: 100%;
+            padding: 8px;
+            margin: 5px 0 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+    </style>
 </head>
+
 <body>
 
-  <h1>Testador Interativo de Métodos de Arrays</h1>
+    <h1>JavaScript Arrays Interativos</h1>
 
-  <div class="exemplo">
-    <h2>1.keys()</h2>
-    <label>Digite os valores do array (separados por vírgula):</label>
-    <input id="inputKeys" type="text" placeholder="Ex: maçã, banana, laranja">
-    <button onclick="executarKeys()">Mostrar índices</button>
-    <div id="outputKeys" class="output"></div>
-  </div>
+    <!-- Array.keys -->
+    <h3>Array.keys()</h3>
+    <label>Digite os itens separados por vírgula:</label>
+    <input type="text" id="inputKeys" placeholder="Ex: maçã, banana, laranja">
+    <button onclick="mostrarKeys()">Mostrar .keys()</button>
+    <p id="keys01"></p>
+    <p id="keys02" class="hidden"></p>
 
-  <div class="exemplo">
-    <h2>2.entries()</h2>
-    <label>Digite os valores do array:</label>
-    <input id="inputEntries" type="text" placeholder="Ex: banana, morango, kiwi">
-    <button onclick="executarEntries()">Mostrar [índice, valor]</button>
-    <div id="outputEntries" class="output"></div>
-  </div>
+    <!-- Array.entries -->
+    <h3>Array.entries()</h3>
+    <label>Digite as tarefas separadas por vírgula:</label>
+    <input type="text" id="inputEntries" placeholder="Ex: Estudar, Praticar, Revisar">
+    <button onclick="mostrarEntries()">Mostrar .entries()</button>
+    <p id="entries01"></p>
+    <p id="entries02" class="hidden"></p>
 
-  <div class="exemplo">
-    <h2>3.Object.fromEntries()</h2>
-    <label>Digite os valores:</label>
-    <input id="inputObjectEntries" type="text" placeholder="Ex: azul, verde, vermelho">
-    <button onclick="executarObjectFromEntries()">Converter para objeto</button>
-    <div id="outputObjectEntries" class="output"></div>
-  </div>
-
-  <div class="exemplo">
-    <h2>4.with() (trocar valor do array)</h2>
-    <label>Array:</label>
-    <input id="inputWithArray" type="text" placeholder="Ex: camisa, calça, boné">
-    <label>Índice para alterar:</label>
-    <input id="inputWithIndex" type="number" placeholder="Ex: 1">
+    <!-- Array.with -->
+    <h3>Array.with()</h3>
+    <label>Digite os itens separados por vírgula:</label>
+    <input type="text" id="inputWith" placeholder="Ex: camisa, calça, boné">
+    <label>Índice a ser substituído:</label>
+    <input type="number" id="indexWith" placeholder="Ex: 1">
     <label>Novo valor:</label>
-    <input id="inputWithValor" type="text" placeholder="Ex: moletom">
-    <button onclick="executarWith()">Aplicar .with()</button>
-    <div id="outputWith" class="output"></div>
-  </div>
+    <input type="text" id="newValueWith" placeholder="Ex: moletom">
+    <button onclick="mostrarWith()">Mostrar .with()</button>
+    <p id="with01"></p>
+    <p id="with02" class="hidden"></p>
 
-  <script>
-    function parseInput(id) {
-      const input = document.getElementById(id).value;
-      return input.split(',').map(item => item.trim()).filter(Boolean);
-    }
+    <script>
+        function mostrarKeys() {
+            const input = document.getElementById('inputKeys').value;
+            const array = input.split(',').map(item => item.trim());
+            const resultBox = document.getElementById('keys02');
+            document.getElementById('keys01').innerHTML = `<strong>Lista:</strong> ${array.join(', ')}`;
+            resultBox.innerHTML = '';
 
-    function executarKeys() {
-      const arr = parseInput("inputKeys");
-      let result = "";
-      for (let i of arr.keys()) {
-        result += `Índice: ${i}<br>`;
-      }
-      document.getElementById("outputKeys").innerHTML = `Array: [${arr.join(', ')}]<br><br>${result}`;
-    }
+            for (let i of array.keys()) {
+                resultBox.innerHTML += `Índice ${i} = ${array[i]}<br>`;
+            }
 
-    function executarEntries() {
-      const arr = parseInput("inputEntries");
-      let result = "";
-      for (let [index, value] of arr.entries()) {
-        result += `[${index}, ${value}]<br>`;
-      }
-      document.getElementById("outputEntries").innerHTML = `Array: [${arr.join(', ')}]<br><br>${result}`;
-    }
+            resultBox.classList.remove('hidden');
+        }
 
-    function executarObjectFromEntries() {
-      const arr = parseInput("inputObjectEntries");
-      const obj = Object.fromEntries(arr.entries());
-      document.getElementById("outputObjectEntries").innerHTML =
-        `Array: [${arr.join(', ')}]<br><br><pre>${JSON.stringify(obj, null, 2)}</pre>`;
-    }
+        function mostrarEntries() {
+            const input = document.getElementById('inputEntries').value;
+            const array = input.split(',').map(item => item.trim());
+            const resultBox = document.getElementById('entries02');
+            document.getElementById('entries01').innerHTML = `<strong>Lista:</strong> ${array.join(', ')}`;
+            resultBox.innerHTML = '';
 
-    function executarWith() {
-      const arr = parseInput("inputWithArray");
-      const index = parseInt(document.getElementById("inputWithIndex").value);
-      const novoValor = document.getElementById("inputWithValor").value;
+            for (let [i, tarefa] of array.entries()) {
+                resultBox.innerHTML += `${i + 1}. ${tarefa}<br>`;
+            }
 
-      if (isNaN(index) || index < 0 || index >= arr.length) {
-        document.getElementById("outputWith").innerHTML = "Índice inválido.";
-        return;
-      }
+            resultBox.classList.remove('hidden');
+        }
 
-      const novaArray = arr.with(index, novoValor);
-      document.getElementById("outputWith").innerHTML =
-        `Array original: [${arr.join(', ')}]<br>` +
-        `Novo array: [${novaArray.join(', ')}]`;
-    }
-  </script>
+        function mostrarWith() {
+            const input = document.getElementById('inputWith').value;
+            const index = parseInt(document.getElementById('indexWith').value);
+            const novoValor = document.getElementById('newValueWith').value;
+            const array = input.split(',').map(item => item.trim());
+
+            const novaArray = array.with(index, novoValor);
+
+            document.getElementById('with01').innerHTML = `<strong>Original:</strong> ${array.join(', ')}`;
+            document.getElementById('with02').innerHTML = `<strong>Nova lista:</strong> ${novaArray.join(', ')}`;
+            document.getElementById('with02').classList.remove('hidden');
+        }
+    </script>
 
 </body>
+
 </html>
